--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     ext {
         compose_ui_version = '1.2.0'
     }
+    dependencies {
+        classpath 'com.huawei.agconnect:agcp:1.8.0.300'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.0' apply false
